--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "4.6.0",
+    "lodash-uuid": "0.0.3",
     "react": "^17.0.2",
     "react-bootstrap": "1.6.1",
     "react-dom": "^17.0.2",
+    "react-json-view": "^1.21.3",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
